--- a/system2/src/AdminNoticeManagement.form
+++ b/system2/src/AdminNoticeManagement.form
@@ -70,19 +70,6 @@
             </constraints>
             <properties/>
           </component>
-          <scrollpane id="378ba">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="3a62" class="javax.swing.JTable" binding="table1" default-binding="true">
-                <constraints/>
-                <properties/>
-              </component>
-            </children>
-          </scrollpane>
           <component id="f35bd" class="javax.swing.JButton" binding="backButton" default-binding="true">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -94,6 +81,19 @@
               <text value="Back"/>
             </properties>
           </component>
+          <scrollpane id="cbebe">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="113e0" class="javax.swing.JTextArea" binding="textArea2" default-binding="true">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <component id="4c251" class="javax.swing.JLabel">
