--- a/system2/src/TO_Medical_Add.form
+++ b/system2/src/TO_Medical_Add.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panal1" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="491"/>
+      <xy x="20" y="20" width="500" height="511"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -13,15 +13,19 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-131073"/>
+        </properties>
         <border type="none"/>
         <children>
           <grid id="7bbbe" layout-manager="GridLayoutManager" row-count="11" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+            <margin top="10" left="10" bottom="10" right="10"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-13922170"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="d5950" class="javax.swing.JTextField" binding="textField1" default-binding="true">
@@ -77,6 +81,8 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
                   <text value="Medical ID"/>
                 </properties>
               </component>
@@ -85,6 +91,8 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
                   <text value="Submission Date"/>
                 </properties>
               </component>
@@ -93,6 +101,8 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
                   <text value="Status"/>
                 </properties>
               </component>
@@ -101,6 +111,8 @@
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
                   <text value="Start Date"/>
                 </properties>
               </component>
@@ -109,6 +121,8 @@
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
                   <text value="End Date"/>
                 </properties>
               </component>
@@ -117,6 +131,8 @@
                   <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
                   <text value="Reason"/>
                 </properties>
               </component>
@@ -149,6 +165,8 @@
                   <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
                   <text value="Course Code"/>
                 </properties>
               </component>
@@ -157,6 +175,8 @@
                   <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
                   <text value="Student Id"/>
                 </properties>
               </component>
@@ -165,6 +185,8 @@
                   <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial Black" size="16" style="1"/>
+                  <foreground color="-131073"/>
                   <text value="TO Id"/>
                 </properties>
               </component>
@@ -173,9 +195,9 @@
                   <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <background color="-13922170"/>
+                  <background color="-131073"/>
                   <font name="Arial Black" size="14" style="1"/>
-                  <foreground color="-131073"/>
+                  <foreground color="-14744039"/>
                   <text value="Add"/>
                 </properties>
               </component>
